# wanikani-mcp

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
src/: auth.rs  error.rs  main.rs  result.rs
src/html/: authorize.html
src/wanikani/: mcp.rs  mod.rs  subjects.rs  user.rs
templates/: authorize.html  setup.html
