[package]
name = "wanikani-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
anyhow = "1"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum = "0.8"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
clap = { version = "4", features = ["derive", "env"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
ratelimit = "0.9"
rmcp = { version = "0.12", features = [ "server", "macros", "client", "transport-io", "transport-streamable-http-server", "auth", "elicitation", "schemars" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.19.0", features = ["v4"] }
wana_kana = "4"
wanisabi = { git = "https://github.com/jemsurfer/wanisabi", rev = "7ab7194a6acafb0a147dec00cb840532b8681762" }
